Avoids limit fixed nav height on mobile

--- a/app/assets/stylesheets/components/shared/c-header.scss
+++ b/app/assets/stylesheets/components/shared/c-header.scss
@@ -55,6 +55,8 @@
   }
 
   &.-fixed {
-    height: 50px;
+    @media #{$mq-tablet} {
+      height: 50px;
+    }
   }
 }
